@@ -9,11 +9,11 @@
  * mistake, or contact the author.
  */
 #if !defined(PQXX_H_VERSION)
-#define PQXX_H_VERSION
+#  define PQXX_H_VERSION
 
-#if !defined(PQXX_HEADER_PRE)
-#error "Include libpqxx headers as <pqxx/header>, not <pqxx/header.hxx>."
-#endif
+#  if !defined(PQXX_HEADER_PRE)
+#    error "Include libpqxx headers as <pqxx/header>, not <pqxx/header.hxx>."
+#  endif
 
 /// Full libpqxx version string.
 #  define PQXX_VERSION "7.8.0"
